--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "file-loader": "^5.1.0",
+    "moment": "^2.29.4",
     "react": "^16.10.2",
     "react-bootstrap": "^2.7.2",
     "react-cookie": "^4.1.1",
